--- a/memedo/pubspec.yaml
+++ b/memedo/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.7.4
   url_launcher: ^6.0.3
-  esys_flutter_share: ^1.0.2
   http: ^0.13.1
+  gallery_saver_safety: ^1.0.8
 
 dev_dependencies:
   flutter_test:
